# diff2d_benchmark

./: .gitignore  LICENSE  README.md
code/: Makefile
code/diff2d/: Make.depend  Make.prof  Make.runs  Makefile  compare.sh  compare_gcc_models.sh  compare_intel.sh  compare_intel_models.sh  compare_models.sh  compare_moduls.sh  compare_spr.sh  graph_compilers.sh  graph_models.sh  graph_ratios.sh  ixpug_tests.txt  linalg.cpp  linalg.hpp  main.cpp  maskgen.py  scale_graphs.sh  scale_intel.sh  scale_mpi.sh  scale_procs.sh  srun.sh
code/diff2d/bd0/: Makefile  linalg.cpp
code/diff2d/clps/: Makefile  diff2d-scaling-clps-clx-intel-40000.runout  diff2d-scaling-clps-frontera25000.runout  diff2d-scaling-clps-spr-gcc-25000.runout  diff2d-scaling-clps-spr-gcc-2600.runout  diff2d-scaling-clps-spr-gcc-26000.runout  diff2d-scaling-clps-spr-intel-25000.runout  diff2d-scaling-clps-spr-intel-26000.runout  diff2d.cpp
code/diff2d/cmake/: CMakeLists.txt  Makefile
code/diff2d/codes/: Makefile
code/diff2d/cxx/: Makefile  diff2d-scaling-cxx-frontera25000.runout  diff2d-scaling-seq-clx-intel-40000.runout  diff2d.cpp
code/diff2d/diy2d/: Makefile  diff2d-scaling-diy2d-clx-intel-40000.runout  diff2d-scaling-diy2d-spr-gcc-25000.runout  diff2d-scaling-diy2d-spr-intel-25000.runout  diff2d.cpp
code/diff2d/diy2e/: Makefile  diff2d-scaling-diy2e-spr-intel-25000.runout  diff2d.cpp
code/diff2d/f77/: Makefile  diff2d.F90
code/diff2d/iota/: Makefile  diff2d-scaling-iota-spr-gcc-25000.runout  diff2d-scaling-iota-spr-gcc-26000.runout  diff2d-scaling-iota-spr-intel-25000.runout  diff2d-scaling-iota-spr-intel-26000.runout  diff2d.cpp
code/diff2d/kokkos/: Makefile  diff2d-scaling-kokkos-clx-intel-40000.runout  diff2d-scaling-kokkos-spr-gcc-25000.runout  diff2d-scaling-kokkos-spr-intel-20000.runout  diff2d-scaling-kokkos-spr-intel-25000.runout  diff2d.cpp  linalg.cpp  linalg.hpp
code/diff2d/kokkos2d/: Makefile  diff2d-scaling-kokkos-clx-gcc-40000.runout  diff2d-scaling-kokkos-clx-intel-40000.runout  diff2d-scaling-kokkos-frontera-intel-40000.runout  diff2d-scaling-kokkos-spr-intel-20000.runout  diff2d-scaling-kokkos2d-spr-gcc-26000.runout  diff2d-scaling-kokkos2d-spr-intel-26000.runout  diff2d.cpp  linalg.cpp  linalg.hpp  sparsealg.cpp  sparsealg.hpp
code/diff2d/lib/: Makefile  base.cpp  base.hpp  brd0.cpp  clps.cpp  clps.hpp  dist.cpp  dist.hpp  diy2d.cpp  diy2d.hpp  diy2e.cpp  diy2e.hpp  iota.cpp  iota.hpp  oned.cpp  oned.hpp  options.cpp  options.hpp  plc.cpp  plc.hpp  range.cpp  range.hpp  seq.cpp  seq.hpp  span.cpp  span.hpp  sycl.cpp  sycl.hpp
code/diff2d/mpl/: Makefile  diff2d-scaling-frontera-N4-40000.runout  diff2d-scaling-mpl-frontera10000.runout  diff2d.cpp  distalg.cpp  distalg.hpp  jobscript
code/diff2d/omp/: diff2d-scaling-oned-clx-gcc-40000.runout  diff2d-scaling-oned-clx-intel-40000.runout  diff2d-scaling-oned-pvc1-oneapi-40000.runout  diff2d.cpp
code/diff2d/oned/: Makefile  diff2d-scaling-oned-clx-gcc-26000.runout  diff2d-scaling-oned-clx-intel-40000.runout  diff2d-scaling-oned-grace-gcc-26000.runout  diff2d-scaling-oned-grx-gcc-26000.runout  diff2d-scaling-oned-icx-gcc-26000.runout  diff2d-scaling-oned-icx-intel-26000.runout  diff2d-scaling-oned-icx-intel-32000.runout  diff2d-scaling-oned-icx-intel-40000.runout  diff2d-scaling-oned-skx-gcc-26000.runout  diff2d-scaling-oned-skx-gcc-40000.runout  diff2d-scaling-oned-skx-intel-26000.runout  diff2d-scaling-oned-skx-intel-32000.runout  diff2d.cpp  (+12 more)
code/diff2d/seq/: CMakeLists.txt  Makefile  diff2d-scaling-cxx-frontera30000.runout  diff2d-scaling-seq-clx-gcc-40000.runout  diff2d.cpp  linalg.cpp.bak
makefiles/: Make.compile  Make.mpi_run  Make.omp_run  Make.snippets
scripts/: cutspace.py  graphs_extract.py  multi_graphs_extract.py  ratio_graphs_extract.py
writing/: Makefile
writing/beamer/: beamercolorthemeHPC.sty  beamerinnerthemeHPC.sty  beamerouterthemeHPC.sty  beamerthemeHPC.sty
writing/diff2d/: Makefile  acronyms.tex  cppcon2024.tex  cppcon2024slides.tex  d2dtests.tex  diff2d.tex  ixpug2024slides.tex  ixpug24eijkhout.tex  macroload.tex
writing/graphs/: d2dclpsratio.tex  d2dgmodelratio.tex  d2dgmodeltime.tex  d2dimodelratio.tex  d2dimodeltime.tex  d2dkokkosratio.tex  d2donedratio.tex  d2dprocs.tex  d2dprocsbw.tex  d2dspanratio.tex
writing/macros/: acromacs.tex  bookmacs.tex  commonmacs.tex  courseformat.tex  idxmacs.tex  idxpkgmacs.tex  ispidxmacs.tex  listingmacs.tex  pcseidxmacs.tex  slidemacs.tex  snippetmacs.tex
writing/plots/: Makefile  clps-ratios-iccgcc-rat.csv  clps-ratios-iccgcc.csv  gcc-oned-clx-26000-bw-sp.csv  gcc-oned-clx-26000-bw.csv  gcc-oned-clx-26000-sp.csv  gcc-oned-clx-26000.csv  gcc-oned-grace-26000-bw-sp.csv  gcc-oned-grace-26000-bw.csv  gcc-oned-grace-26000-sp.csv  gcc-oned-grace-26000.csv  gcc-oned-grx-26000-bw-sp.csv  gcc-oned-grx-26000-bw.csv  gcc-oned-grx-26000-sp.csv  gcc-oned-grx-26000.csv  gcc-oned-icx-26000-bw-sp.csv  gcc-oned-icx-26000-bw.csv  gcc-oned-icx-26000-sp.csv  gcc-oned-icx-26000.csv  gcc-oned-skx-26000-bw-sp.csv  gcc-oned-skx-26000-bw.csv  gcc-oned-skx-26000-sp.csv  gcc-oned-skx-26000.csv  gcc-oned-spr-26000-bw-sp.csv  gcc-oned-spr-26000-bw.csv  gcc-oned-spr-26000-sp.csv  gcc-oned-spr-26000.csv  kokkos-ratios-iccgcc-rat.csv  kokkos-ratios-iccgcc.csv  oned-ratios-iccgcc-rat.csv  oned-ratios-iccgcc.csv  span-ratios-iccgcc-rat.csv  span-ratios-iccgcc.csv  spr-models-gcc-26000-sp.csv  spr-models-gcc-26000.csv  spr-models-gcc-sp.csv  spr-models-intel-sp.csv  spr-models-intel.csv  spr-models-sp.csv  spr-models.csv  (+4 more)
writing/poster/: instructions.txt
writing/snippets/: README  d2d5ptiota  d2d5ptoned  d2d5ptseq  d2d5ptspan  d2dbordered  d2ddistributed1  d2ddistributed3  d2ddiyiter  d2dexchange  d2dinner  d2dinneri  d2distarraycomm  d2distarraydata  d2dmain  d2dnormiota  d2dnormmpl  d2dnormomp  d2dnormseq  d2dnormspan  d2donedindex  d2dscaledseq  d2dscaleiota  d2dscaleoned  d2dscaleseq  d2dscalespan  d2dseqindex  d2dspan0  d2dspan1  d2duniqueseq  d2dupcast  d2dvirtualfunc  d2e5ptspan  d2ebordered  d2ediyiter  d2enormspan  d2escalespan  end  kokkosbufaccess  kokkosbufcreate  (+7 more)
(+37 files in other folders)
